lab4/Ebinger/roscourse_ws/log/build_2026-03-15_10-15-42/python_turtle/stderr.log
  File "/home/yahboom/Desktop/S26_RobotProgramming_Crystal/lab4/Ebinger/roscourse_ws/install/python_turtle/lib/python3.10/site-packages/python_turtle/turtlebot_client.py", line 41
    self.color_cli = self.create_client(SetColor,<fill this in>)
                                                 ^
SyntaxError: invalid syntax

